--- a/ex-6/cart/cart.html
+++ b/ex-6/cart/cart.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../utils/normalize.css">
     <link rel="stylesheet" href="../utils/navbar.css">
     <link rel="stylesheet" href="cart.css">
@@ -13,14 +16,55 @@
     <div class="container nav-div">
         <a href="../index.html">E-commerce</a>
         <div>
-            <a href="">Carrinho de compras</a>
+            <a href="">Cart</a>
         </div>
     </div>
 </nav>
 <main class="container">
     <section id="cart-products">
+        <a href="../checkout/checkout.html"><button class="finish">Checkout</button></a>
     </section>
 </main>
+<footer>
+    <div class="footer-container">
+        <div class="footer-section about">
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quaerat dicta porro rerum neque doloremque reprehenderit a quia, omnis, unde provident dolores tempore ipsum, quidem.</p>
+        </div>
+
+        <div class="footer-section links">
+            <h2>Quick Links</h2>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">FAQs</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-section contact">
+            <h2>Contact Us</h2>
+            <p>Email: email@email.com</p>
+            <p>Phone: 1234 1234</p>
+            <p>Address: Lorem ipsum dolor sit amet consectetur</p>
+        </div>
+
+        <div class="footer-section follow-us">
+            <h2>Follow Us</h2>
+            <ul class="social-links">
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">LinkedIn</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="footer-bottom">
+        <p>&copy; 2024 E-commerce.</p>
+    </div>
+</footer>
 </body>
 <script src="cart.js"></script>
 </html>
